add promise in controllers
